<resources>
    <string name="app_name">LOL - API</string>
    <!-- Strings used at main activity items -->
    <string name="server_status">Server Status</string>
    <string name="search_summoner">Search Summoner</string>
    <string name="champions">Champions</string>

    <string name="insert_summoner_name">Type Summoner name</string>
    <string name="send">Send</string>

    <string name="online">Online</string>
    <string name="warning">Warning</string>
    <string name="offline">Offline</string>

    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_data_received">No data received.</string>

    <string name="there_are_no_info">There are no info.</string>
    <string name="none">None</string>

    <string name="queue">Queue: </string>
    <string name="league">League: </string>
    <string name="tier">Tier: </string>
    <string name="league_points">PDL: </string>
    <string name="wins">Wins: </string>
    <string name="losses">Losses: </string>

    <string name="stats">Stats</string>
    <string name="abilities">Abilities</string>
    <string name="attributes">Attributes</string>
    <string name="story">Story</string>

    <string name="passive">Passive</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>

    <string name="title_activity_single_champion_full_screen_image">SingleChampionFullScreenImage</string>

    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="magic">Magic</string>
    <string name="difficulty">Difficulty</string>
</resources>
